--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
             </ul>
         </nav>
         <div class="banner">
-            <div>
-                <h3 class="banner-gr">Hi, I  am</h3>
+            <div class="banner-contant">
+                <h3 class="banner-gr">Hi, I am</h3>
                 <h1 class="banner-marry">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                    because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
@@ -34,7 +35,33 @@
         </div>
     </header>
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-des">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
+                while working with me. Delivering work within time and budget which meets clients requirements in our
+                meta.
+            </p>
+            <div class="about-ifo-container">
+                <div class="about-info">
+                    <h4 class="ifo-title">Name:</h4>
+                    <p class="info-des">Mary Hardy </p>
+                </div>
+                <div class="about-info">
+                    <h4 class="ifo-title">Email:</h4>
+                    <p class="info-des">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="ifo-title">Date of birth:</h4>
+                    <p class="info-des">11 November 1987</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="ifo-title">From:</h4>
+                    <p class="info-des">Los Angeles, USA</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
