--- a/index.html
+++ b/index.html
@@ -62,6 +62,99 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h3 class="section-title">What I do</h3>
+            <p id="section-id" class="section-des">I have more than 10 years experience building software for clients
+                all over the world. Below is a quick overview of my main technical skill sets and technologies i use.
+                Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+
+                        FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+
+                        FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+
+                        FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+
+                        FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+            <section>
+                <h3 class="section-title">A summary of My Resume</h3>
+                <div class="re-container">
+                    <div class="re-cloumn">
+                        <h3 class="re-column-title">My Education</h3>
+                        <div class="re-item">
+                            <h2 class="re-item-title">Master in Computer Engineering</h2>
+                            <h3 class="re-item-ins">Harvard University / 2015 - 2017</h3>
+                            <p class="re-item-des">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
+                        </div>
+                        <hr>
+                        <h3 class="re-column-title">My Education</h3>
+                        <div class="re-item">
+                            <h2 class="re-item-title">Master in Computer Engineering</h2>
+                            <h3 class="re-item-ins">Harvard University / 2015 - 2017</h3>
+                            <p class="re-item-des">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
+                        </div>
+                        <hr>
+                        <h3 class="re-column-title">My Education</h3>
+                        <div class="re-item">
+                            <h2 class="re-item-title">Master in Computer Engineering</h2>
+                            <h3 class="re-item-ins">Harvard University / 2015 - 2017</h3>
+                            <p class="re-item-des">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
+                        </div>
+                    </div>
+                    <div class="re-cloumn">
+                        <h3 class="re-column-title">My Experience</h3>
+                        <div class="re-item">
+                            <h2 class="re-item-title">Master in Computer Engineering</h2>
+                            <h3 class="re-item-ins">Harvard University / 2015 - 2017</h3>
+                            <p class="re-item-des">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
+                        </div>
+                        <hr>
+                        <h3 class="re-column-title">My Education</h3>
+                        <div class="re-item">
+                            <h2 class="re-item-title">Master in Computer Engineering</h2>
+                            <h3 class="re-item-ins">Harvard University / 2015 - 2017</h3>
+                            <p class="re-item-des">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
+                        </div>
+                        <hr>
+                        <h3 class="re-column-title">My Education</h3>
+                        <div class="re-item">
+                            <h2 class="re-item-title">Master in Computer Engineering</h2>
+                            <h3 class="re-item-ins">Harvard University / 2015 - 2017</h3>
+                            <p class="re-item-des">List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
     </main>
     <footer>
 
