--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="download-btn">
+                    <button class="btn-primary">Download CV</button>
+                </div>
             </section>
         </section>
     </main>
